# gitManager

./: CMakeLists.txt  README.md  gitManager.cpp  gitManager.h  main.cpp  main.ui
src/: CMakeLists.txt  gitManager.cpp  gitManager.h  gitcore.cpp  gitcore.h  globalsettings.cpp  globalsettings.h  main.cpp  main.ui  qrepo.cpp  qrepo.h  repositorymodel.cpp  repositorymodel.h  repositorynode.cpp  repositorynode.h  sessionmanager.cpp  sessionmanager.h  tabrepo.cpp  tabrepo.h
src/about/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui
src/dialog/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui
src/docks/: dockconsole.cpp  dockconsole.h  dockconsole.ui  dockprojects.cpp  dockprojects.h  dockprojects.ui  dockstatus.cpp  dockstatus.h  dockstatus.ui
src/resource/: resource.qrc
